welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:1: error: '=>' expected but ')' found.
def movemnt(n: Int)(f: () => ()): Unit = {
                               ^Source:11: error: identifier expected but '}' found.
	}
        ^